# flick

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  flick-tray.desktop  io.github.raul3k.flick.desktop  release-please-config.json
.github/workflows/: ci.yml  commitlint.yml  release-please.yml  sync.yml
locales/: app.yml
src/: config.rs  i18n.rs  main.rs  palette.rs  shortcut.rs
