[package]
name = "flick"
version = "0.2.0"
edition = "2024"
description = "Controle de microfone para o desktop (mute/unmute com atalho e janela ao vivo)"
license = "MIT"

[dependencies]
async-channel = "2.5.0"
gtk = { version = "0.11.4", package = "gtk4" }
ksni = { version = "0.3.6", features = ["blocking"] }
pipewire = "0.10.0"

[package.metadata.deb]
maintainer = "Raul Souza <raul.3k@gmail.com>"
depends = "$auto, wireplumber"
section = "sound"
priority = "optional"
assets = [
    ["target/release/flick", "usr/bin/", "755"],
    ["io.github.raul3k.flick.desktop", "usr/share/applications/", "644"],
    ["flick-tray.desktop", "etc/xdg/autostart/", "644"],
]
